GCW-757 comment# fixed overlapping icons issue on search page

--- a/app/styles/templates/_search.scss
+++ b/app/styles/templates/_search.scss
@@ -2,7 +2,7 @@
   position: relative;
   padding: 0;
   background-color: $light-grey;
-  z-index: 100;
+  z-index: 1000;
 
   input {
     padding-left: 0.5rem;
